--- a/SimpleRPCServer/pom.xml
+++ b/SimpleRPCServer/pom.xml
@@ -13,9 +13,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.101tec</groupId>
+            <groupId>com.github.adyliu</groupId>
             <artifactId>zkclient</artifactId>
-            <version>0.10</version>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+        	<groupId>net.sea.simple.rpc</groupId>
+        	<artifactId>net.sea.simpl.rpc.commons</artifactId>
+        	<version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
