--- a/SimpleRPCCommons/pom.xml
+++ b/SimpleRPCCommons/pom.xml
@@ -21,6 +21,11 @@
 			<version>${spring.verion}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
+			<version>1.5.9.RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
@@ -77,7 +82,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>net.sea.simpl.rpc.utils.PropertiesConfigUtils</mainClass>
+							<mainClass>net.sea.simple.rpc.utils.PropertiesConfigUtils</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
