--- a/SimpleRPCTests/src/main/resources/application.yml
+++ b/SimpleRPCTests/src/main/resources/application.yml
@@ -6,6 +6,6 @@ rpc:
   server:
     config:
       serviceName: net.sea.demo.service
-      serviceIp: 192.168.4.119
+#      serviceIp: 192.168.4.119
       port: 2001
       opened: true
