--- a/SimpleRPCClient/pom.xml
+++ b/SimpleRPCClient/pom.xml
@@ -22,5 +22,10 @@
 			<artifactId>cglib</artifactId>
 			<version>3.2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sea.simple.rpc</groupId>
+			<artifactId>net.sea.simple.rpc.contract</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
