--- a/SimpleRPCCommons/pom.xml
+++ b/SimpleRPCCommons/pom.xml
@@ -65,6 +65,16 @@
             <artifactId>jboss-marshalling-serial</artifactId>
             <version>${marshalling.verion}</version>
         </dependency>
+		<!--<dependency>
+			<groupId>org.jboss.errai</groupId>
+			<artifactId>errai-marshalling</artifactId>
+			<version>4.2.1.Final</version>
+		</dependency>-->
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.10</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
