--- a/SimpleRPCClient/pom.xml
+++ b/SimpleRPCClient/pom.xml
@@ -9,7 +9,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>net.sea.simple.rpc.client</artifactId>
-
+	<name>SimpleRPCClient</name>
 
 	<dependencies>
 		<dependency>
