--- a/SimpleRPCContract/pom.xml
+++ b/SimpleRPCContract/pom.xml
@@ -24,5 +24,10 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.sea.simple.rpc</groupId>
+            <artifactId>net.sea.simple.rpc.client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
