--- a/SimpleRPCServer/pom.xml
+++ b/SimpleRPCServer/pom.xml
@@ -9,6 +9,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>net.sea.simple.rpc.server</artifactId>
+	<name>SimpleRPCServer</name>
 
 	<dependencies>
 		<dependency>
