--- a/SimpleRPCTests/pom.xml
+++ b/SimpleRPCTests/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+	<name>SimpleRPCTests</name>
 
     <artifactId>net.sea.simple.rpc.tests</artifactId>
 
