--- a/SimpleRPCClientTest/pom.xml
+++ b/SimpleRPCClientTest/pom.xml
@@ -18,6 +18,17 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>${spring.boot.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>net.sea.simple.rpc</groupId>
             <artifactId>net.sea.simple.rpc.client</artifactId>
             <version>1.0-SNAPSHOT</version>
