--- a/SimpleRPCRegisterCenter/pom.xml
+++ b/SimpleRPCRegisterCenter/pom.xml
@@ -7,16 +7,18 @@
     <parent>
         <groupId>net.sea.simple.rpc</groupId>
         <artifactId>net.sea.simple.rpc</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <groupId>net.sea.simple.rpc</groupId>
     <artifactId>net.sea.simple.rpc.register.center</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
     <name>SimpleRPCRegisterCenter</name>
-    <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>net.sea.simple.rpc</groupId>
+            <artifactId>net.sea.simple.rpc.commons</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
