--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.sea.simple.rpc</groupId>
     <artifactId>net.sea.simple.rpc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>SimpleRPCCommons</module>
         <module>SimpleRPCServer</module>
@@ -26,6 +26,8 @@
         <junit.version>4.12</junit.version>
         <spring.boot.version>1.5.14.RELEASE</spring.boot.version>
         <nttety.version>4.1.16.Final</nttety.version>
+        <spring.verion>4.3.13.RELEASE</spring.verion>
+        <marshalling.verion>2.0.2.Final</marshalling.verion>
         <!--<spring.boot.version>2.0.3.RELEASE</spring.boot.version>-->
     </properties>
 
