--- a/SimpleRPCEtcdRegisterCenter/pom.xml
+++ b/SimpleRPCEtcdRegisterCenter/pom.xml
@@ -12,5 +12,15 @@
     <artifactId>net.sea.simple.rpc.register.center.etcd</artifactId>
     <name>SimpleRPCEtcdRegisterCenter</name>
     <dependencies>
+        <dependency>
+            <groupId>net.sea.simple.rpc</groupId>
+            <artifactId>net.sea.simple.rpc.register.center</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mousio</groupId>
+            <artifactId>etcd4j</artifactId>
+            <version>2.7.0</version>
+        </dependency>
     </dependencies>
 </project>
