--- a/SimpleRPCZKRegisterCenter/pom.xml
+++ b/SimpleRPCZKRegisterCenter/pom.xml
@@ -12,5 +12,15 @@
     <artifactId>net.sea.simple.rpc.register.center.zk</artifactId>
     <name>SimpleRPCZKRegisterCenter</name>
     <dependencies>
+        <dependency>
+            <groupId>net.sea.simple.rpc</groupId>
+            <artifactId>net.sea.simple.rpc.register.center</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.adyliu</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 </project>
