--- a/SimpleRPCServerTest/src/main/resources/application.yml
+++ b/SimpleRPCServerTest/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 register:
   center:
     config:
-      zkServers: bidev191:2181
+      zk:
+        zkServers: bidev191:2181
 rpc:
   server:
     config:
       serviceName: net.sea.demo.service
-#      serviceIp: 192.168.4.119
+      serviceIp: 192.168.4.64
       port: 2001
       opened: true
+spring:
+  profiles:
+    active: zk-reg-center
