--- a/SimpleRPCClient/pom.xml
+++ b/SimpleRPCClient/pom.xml
@@ -18,6 +18,11 @@
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>net.sea.simple.rpc</groupId>
+			<artifactId>net.sea.simple.rpc.register.center.zk</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>3.2.5</version>
