--- a/SimpleRPCServer/pom.xml
+++ b/SimpleRPCServer/pom.xml
@@ -17,5 +17,10 @@
 			<artifactId>net.sea.simple.rpc.commons</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sea.simple.rpc</groupId>
+			<artifactId>net.sea.simple.rpc.register.center.zk</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
