--- a/SimpleRPCClientTest/src/main/resources/application.yml
+++ b/SimpleRPCClientTest/src/main/resources/application.yml
@@ -2,7 +2,9 @@ register:
   center:
     config:
       zk:
-        zkServers: bidev191:2181
+        zkServers: 192.168.2.56:2181,192.168.2.56:2182,192.168.2.56:2183
+        sessionTimeout: 60000
+        connectionTimeout: 60000
 #rpc:
 #  server:
 #    config:
@@ -12,4 +14,6 @@ register:
 #      opened: true
 spring:
   profiles:
-    active: zk-reg-center
+#    active: zk-reg-center
+    #引用zk注册中心配置
+    include: zk-reg-center
