--- a/SimpleRPCCommons/pom.xml
+++ b/SimpleRPCCommons/pom.xml
@@ -44,7 +44,8 @@
 		<dependency>
 			<groupId>com.github.adyliu</groupId>
 			<artifactId>zkclient</artifactId>
-			<version>2.1.1</version>
+			<!--<version>2.1.1</version>-->
+			<version>2.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
