--- a/SimpleRPCServerTest/src/main/resources/application.yml
+++ b/SimpleRPCServerTest/src/main/resources/application.yml
@@ -2,14 +2,18 @@ register:
   center:
     config:
       zk:
-        zkServers: bidev191:2181
+        zkServers: 192.168.2.56:2181,192.168.2.56:2182,192.168.2.56:2183
+        sessionTimeout: 60000
+        connectionTimeout: 60000
 rpc:
   server:
     config:
       serviceName: net.sea.demo.service
-      serviceIp: 192.168.4.64
+      serviceIp: 192.168.2.82
       port: 2001
       opened: true
 spring:
   profiles:
-    active: zk-reg-center
+#    active: zk-reg-center
+    #引用zk注册中心配置
+    include: zk-reg-center
