--- a/SimpleRPCClient/pom.xml
+++ b/SimpleRPCClient/pom.xml
@@ -17,9 +17,14 @@
 			<artifactId>net.sea.simple.rpc.commons</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>net.sea.simple.rpc</groupId>
 			<artifactId>net.sea.simple.rpc.register.center.zk</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>-->
+		<dependency>
+			<groupId>net.sea.simple.rpc</groupId>
+			<artifactId>net.sea.simple.rpc.register.center.nacos</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
