nacos客户端增加版本号

--- a/SimpleRPCClientTest/src/main/resources/application.yml
+++ b/SimpleRPCClientTest/src/main/resources/application.yml
@@ -10,6 +10,13 @@ register:
         needAuth: true
         username: nacos
         password: nacos
+rpc:
+  service:
+    net:
+      sea:
+        demo:
+          service:
+            version : 2.0
 #rpc:
 #  server:
 #    config:
