--- a/SimpleRPCServer/pom.xml
+++ b/SimpleRPCServer/pom.xml
@@ -17,11 +17,11 @@
 			<artifactId>net.sea.simple.rpc.commons</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-		<!--<dependency>
+		<dependency>
 			<groupId>net.sea.simple.rpc</groupId>
 			<artifactId>net.sea.simple.rpc.register.center.zk</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
-		</dependency>-->
+		</dependency>
 		<dependency>
 			<groupId>net.sea.simple.rpc</groupId>
 			<artifactId>net.sea.simple.rpc.register.center.nacos</artifactId>
