--- a/SimpleRPCServerTest/src/main/resources/application.yml
+++ b/SimpleRPCServerTest/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 register:
   center:
     config:
-#      zk:
-#        zkServers: 192.168.2.56:2181,192.168.2.56:2182,192.168.2.56:2183
-#        sessionTimeout: 60000
-#        connectionTimeout: 60000
+      zk:
+        enable: false
+        zkServers: localhost:2181
+        sessionTimeout: 60000
+        connectionTimeout: 60000
       nacos:
+        enable: true
         serverAddresses: 127.0.0.1:8848
         needAuth: true
         username: nacos
@@ -25,4 +27,4 @@ spring:
     #引用zk注册中心配置
 #    include: zk-reg-center
     #引用nacos注册中心配置
-    include: nacos-reg-center
+#    include: nacos-reg-center
