--- a/samples/SimpleRPCContract/pom.xml
+++ b/samples/SimpleRPCContract/pom.xml
@@ -6,18 +6,19 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.sea.simple.rpc</groupId>
-        <artifactId>net.sea.simple.rpc.parent</artifactId>
+        <artifactId>samples</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>net.sea.simple.rpc.register.center</artifactId>
-    <name>SimpleRPCRegisterCenter</name>
+    <groupId>net.sea.simple.rpc</groupId>
+    <artifactId>net.sea.simple.rpc.contract</artifactId>
+    <name>SimpleRPCContract</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
             <groupId>net.sea.simple.rpc</groupId>
-            <artifactId>net.sea.simple.rpc.commons</artifactId>
+            <artifactId>net.sea.simple.rpc.client</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
