--- a/pom.xml
+++ b/pom.xml
@@ -5,20 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.sea.simple.rpc</groupId>
-    <artifactId>net.sea.simple.rpc</artifactId>
+    <artifactId>net.sea.simple.rpc.parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>SimpleRPCCommons</module>
         <module>SimpleRPCServer</module>
         <module>SimpleRPCClient</module>
-        <module>SimpleRPCTests</module>
-        <module>SimpleRPCContract</module>
-        <module>SimpleRPCClientTest</module>
-        <module>SimpleRPCServerTest</module>
         <module>SimpleRPCRegisterCenter</module>
-        <module>SimpleRPCZKRegisterCenter</module>
-        <module>SimpleRPCEtcdRegisterCenter</module>
-        <module>SimpleRPCNacosRegisterCenter</module>
+        <module>samples</module>
+        <module>RegisterCenterImpl</module>
     </modules>
     <packaging>pom</packaging>
     <name>SimpleRPC</name>
