增加路由缓存

--- a/samples/SimpleRPCClientTest/src/main/resources/application.yml
+++ b/samples/SimpleRPCClientTest/src/main/resources/application.yml
@@ -12,6 +12,9 @@ register:
         needAuth: true
         username: nacos
         password: nacos
+    cache:
+      enable: true
+
 rpc:
   service:
     net:
